--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <i class="fa fa-linkedin-square fa-3x"></i>
               </a>
               <a href="./test.pdf">
-                <i class="fa fa-list-alt fa-3x"><div class="note">(resume)</div></i>
+                <i class="fa fa-list-alt fa-3x"> <div class="note">(Resume)</div></i>
               </a>
                
             </div>
