--- a/index.html
+++ b/index.html
@@ -24,10 +24,16 @@
   <body>
     <div class="container">
       <div class="row">
+        <div class="col-md-1"></div>
         <div class="col-md-4" id="pic-container">
-          <img src="./images/surfboard.gif" height="500" width="500">
+          <div class="surfboard">
+            <div class="me-container">
+              <!-- <img class="me" src="./images/me.png"> -->
+            </div>
+          </div>
+          
         </div>
-        <div class="col-md-8">
+        <div class="col-md-7">
           <div class="info">
             <h1>
               Joseph Chambers
@@ -58,7 +64,8 @@
               </p>
               <br>
               <p>
-                Check out my Githup page! Recently, I've been developing <a href="https://jj-list.herokuapp.com">jj's List</a>.
+                Check out my Githup page! Recently, I've been developing <a href="https://jj-list.herokuapp.com">jj's List</a>. While you're here, have some 
+                <a href="josephbrianchambers.github.io/Snake">fun.</a>
               </p>
             </div>
           </div>
@@ -69,7 +76,7 @@
           
           <div class="panel panel-primary">
             <div class="panel-heading">
-              <h3 class="panel-title">Skills</h3>
+              <h3 class="panel-title">Languages and Technologies I know</h3>
             </div>
             <div class="panel-body">
               <img class="icon" src="./images/backbone.png" >
