--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
               <br>
               <p>
                 Check out my Githup page! Recently, I've been developing <a href="https://jj-list.herokuapp.com">jj's List</a>. While you're here, have some 
-                <a href="josephbrianchambers.github.io/Snake">fun.</a>
+                <a href="https://josephbrianchambers.github.io/Snake">fun.</a>
               </p>
             </div>
           </div>
