--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
       <hr>
       <div class="cite">
         <cite>Surfboard photo source: </cite>
-        <a ref="http://www.fit2surf.com/online-shop/surf-board-shop/visionary-surfboards/retro-fish-rocker/">
+        <a href="http://www.fit2surf.com/online-shop/surf-board-shop/visionary-surfboards/retro-fish-rocker/">
           fit2surf.com
         </a>
       </div>
