--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
               <a href="http://www.linkedin.com/in/josephbrianchambers">
                 <i class="fa fa-linkedin-square fa-3x"></i>
               </a>
-              <a href="./test.pdf">
+              <a href="./JosephChambers_Resume_draft1.pdf">
                 <i class="fa fa-list-alt fa-3x"> <div class="note">(Resume)</div></i>
               </a>
                
