add meta description tag

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <title>DEV Joseph Chambers</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Personal wiki page for Joseph Chambers, skilled web developer currently living in San Francisco">
+    
     <!-- Bootstrap -->
     <link href="./dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./font-awesome-4.0.3/css/font-awesome.min.css">
