--- a/index.html
+++ b/index.html
@@ -66,7 +66,11 @@
               </p>
               <br>
               <p>
-                Check out my Githup page! Recently, I've been developing <a href="https://jj-list.herokuapp.com">jj's List</a>. While you're here, have some 
+                Check out my Githup page! Recently, I've been developing 
+                <a href="https://jj-list.herokuapp.com">jj's List</a>
+                 and a 
+                 <a href="https://location-tweet-feed.herokuapp.com/">location based tweet feed.</a>
+                  While you're here, have some 
                 <a href="http://josephbrianchambers.com/Snake">fun.</a>
               </p>
             </div>
