--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
               </p>
               <br>
               <p>
-                Check out my Githup page! Recently, I've been developing 
+                Check out my Githup page! Recently, I have been developing 
                 <a href="https://jj-list.herokuapp.com">jj's List</a>
                  and a 
                  <a href="https://location-tweet-feed.herokuapp.com/">location based tweet feed.</a>
@@ -91,8 +91,10 @@
               <img class="icon" src="./images/HTML.png">
               <img class="icon" src="./images/IGOR_Pro_Logo.png">
               <img class="icon" src="./images/JavaScript.png">
+              <br>
               <img class="icon" src="./images/jquery.png">
               <img class="icon" src="./images/LabVIEW.png">
+              <img class="icon" src="./images/MongoDB.png">
               <img class="icon" src="./images/Postgresql.png">
               <img class="icon" src="./images/Ruby_logo.png">
               <img class="icon" src="./images/Ruby_on_Rails.png">
