--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div class="contact">
               Email: 
               <a href="mailto:josephbrianchambers@gmail.com">JosephBrianChambers@gmail.com</a><br>
-              Phone: (619) 707-7677
+              Phone: (619) 708-7677
             </div>
             <hr>            
             <div class="links">
@@ -66,7 +66,7 @@
               </p>
               <br>
               <p>
-                Check out my Githup page! Recently, I have been developing 
+                Check out my GitHub page! Recently, I have been developing 
                 <a href="https://jj-list.herokuapp.com">jj's List</a>
                  and a 
                  <a href="https://location-tweet-feed.herokuapp.com/">location based tweet feed.</a>
